Update pom.xml
mvn test